@@ -93,6 +93,11 @@
   </schema>
 
   <schema id="com.googlecode.gfeedline.plugins.twitter" path="/apps/gfeedline/plugins/twitter/">
+    <key name="recent-target" type="i">
+      <default>4</default>
+      <summary>Recent Twitter target</summary>
+      <description>Recent used Twitter API for target combobox on feedsource dialog.</description>
+    </key>
     <key name="access-token" type="s">
       <default>''</default>
       <summary>Auth token</summary>
